--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="limited-time-offer-container">
             <p>CLAIM YOUR 10% DISCOUNT</p>
         </div>
-        <div class="messager-icon-container">
+<!--         <div class="messager-icon-container">
             <img src="imgs/message-img.jpg" alt="img">
 
             <div class="message-container-content-box">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <nav class="main-top-navbar">
             <div class="sub-main-top-navbar">
