--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title style="display: none;">Professional JS Website 1</title>
+        <title style="display: none;">Professional Website 4</title>
         <link href="dist/style.css" rel="stylesheet"/>
         <link rel="shortcut icon" href="imgs/pfw-js-default-icon.png" type="image/x-icon">
         <!-- Icons Files: -->
