--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title style="display: none;">Professional Website 4</title>
         <link href="dist/style.css" rel="stylesheet"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="imgs/pfw-js-default-icon.png" type="image/x-icon">
         <!-- Icons Files: -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
